support OpenJDK 21